# FetchML

./: Dockerfile  README.md  main.py  pyproject.toml
data/: sentences.txt
model/: __init__.py  sentence_transformer.py  utils.py
