[tool.poetry]
name = "FetchML"
version = "0.1.0"
description = ""
authors = ["Mohammed Khan <abukhan363@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.3.1"
transformers = "^4.41.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
